--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="bann">
       <img class="m" src="./Mountain.png" alt="">
       <img class="t" src="./Trees.png" alt="">
-      <h1 class="title">WELCOME</h1>
+      <h1 class="title">PARALLAX</h1>
     </div>
     <section class="content">
     <div class="scroll-reveal">
