--- a/index.html
+++ b/index.html
@@ -1,39 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
   <div class="wrap">
     <div class="bann">
+      <h1 class="title">PARALLAX</h1>
       <img class="m" src="./Mountain.png" alt="">
       <img class="t" src="./Trees.png" alt="">
-      <h1 class="title">PARALLAX</h1>
+
     </div>
     <section class="content">
-    <div class="scroll-reveal">
-      <p>
-      <span>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quae debitis id dolorum tempora vero, officia obcaecati iste qui vitae ratione aliquam consequuntur illum natus quo neque. Nisi, molestias distinctio?
-        Saepe adipisci, debitis sed sequi illo voluptatum, voluptates quos fugit laboriosam libero autem harum ea officia, id labore praesentium. Atque, quidem? Necessitatibus, consequatur soluta velit alias autem eius debitis! Praesentium!
-        Sed laborum optio ex nam aliquam? Iusto ab modi voluptatum esse ipsum? Doloribus harum saepe laborum officia, dignissimos velit earum, qui iure nulla mollitia aliquid culpa reprehenderit iusto dolorum aut.
-        Quis id iure quisquam earum optio quod illum molestiae odit. Adipisci dolores alias voluptatem accusamus nulla perferendis sapiente ipsum temporibus, quaerat corporis, sint, illum distinctio neque impedit est! Excepturi, numquam?
-        Quam, voluptate quisquam ullam facilis, dolorum accusantium assumenda sequi ipsum quibusdam, repudiandae minus voluptatum asperiores incidunt deleniti nobis autem culpa adipisci quo iusto excepturi error! Rerum autem repudiandae ea hic?
-        Repellat dolor distinctio modi soluta repudiandae nesciunt porro facilis quas quam? Vitae voluptatum expedita, assumenda corporis officia ipsum maiores quod explicabo quos nisi perferendis labore provident ad quidem suscipit praesentium.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime doloribus dolorem quia magnam veniam nobis veritatis ipsum labore necessitatibus! Earum, ea inventore aperiam expedita alias quaerat totam tempore non quibusdam?
-        Officiis tempora aliquam, facere ullam fugit eius tempore provident rem, nesciunt reiciendis necessitatibus delectus ex saepe iusto fugiat iure? Voluptatibus voluptatum dolorum, illum recusandae eveniet quibusdam blanditiis iusto ab magni?
-        Molestias vel, dolore inventore illum nesciunt quas eaque eius, tempore non at ratione et dolores! Quasi nobis neque fugit, fugiat repellendus, placeat, minima mollitia nesciunt molestias illum esse animi beatae.
-        Eligendi incidunt facilis nostrum quod. Nihil quae adipisci quos impedit voluptates, eum, officiis, ad quidem esse fugiat voluptatum velit facilis atque? Impedit fugit tempore ex minima nesciunt ad hic soluta.
-        Eius sed error porro qui consequatur dolorum! Blanditiis, repellendus? Eveniet odit quo voluptatum laudantium maiores, dolores dignissimos inventore quod quaerat ad quia, voluptate consequuntur, assumenda alias iste eum error corporis.
-      </span>
-    </p>
-    </div>
-  </section>
-    
+      <div class="scroll-reveal">
+        <p>
+          <span>
+            Parallax scrolling effect is a web design technique where background images move slower than foreground
+            content, creating an illusion of depth and an engaging, dynamic user experience.
+          </span>
+        </p>
+      </div>
+    </section>
+    <section class="content2">
+      <div class="wrap2">
+        <div class="bann2">
+       
+          <div class="desert">
+            <h1>DESERT</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique unde minus, vero magni est voluptas
+              natus
+              quisquam fugit, praesentium officiis rem molestiae repudiandae. Temporibus corporis praesentium, nemo
+              deserunt
+              in quod!
+              Et quia laudantium dolores illo assumenda veritatis harum quaerat eaque dolor corrupti expedita sint minus
+              maxime repudiandae nam vel inventore ratione deserunt, voluptate aliquam iure voluptatibus officiis.
+              Nobis,
+              sint distinctio?
+              Tempore eius, alias explicabo possimus corrupti reiciendis cupiditate a esse? Aliquam labore voluptate
+              laboriosam delectus fugit! Est deleniti aut suscipit aliquid saepe tempore, cupiditate, ad, numquam sit
+              repellendus molestias animi!
+              Aspernatur, officiis nam veniam autem atque provident eaque perspiciatis corrupti quaerat velit porro
+              distinctio nesciunt tempora error saepe beatae numquam debitis. Aperiam accusamus quis eveniet architecto
+              quisquam? Maiores, corporis est!
+              Ea dolor modi ullam temporibus, possimus asperiores quam magnam porro pariatur, reiciendis eos! Voluptatem
+              molestias doloremque dolorem nobis quidem. Unde excepturi earum incidunt. Fugiat quae facilis ipsum
+              consectetur quasi nihil.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
-  
+
+
 </body>
+
 </html>
